--- a/api-java/src/main/resources/application.yml
+++ b/api-java/src/main/resources/application.yml
@@ -12,6 +12,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+    properties:
+      javax:
+        persistence:
+          validation:
+            mode: none
   h2:
     console:
       enabled: true
