--- a/web-react/package.json
+++ b/web-react/package.json
@@ -14,8 +14,11 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "axios": "^1.1.3",
+    "bootstrap": "^5.1.3",
     "framer-motion": "^7.6.12",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
