--- a/api-java/src/main/resources/application.yml
+++ b/api-java/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
         persistence:
           validation:
             mode: none
+  flyway:
+    baseline-on-migrate: true
+    locations: db/migration
   h2:
     console:
       enabled: true
